--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,8 @@ dependencies:
   json_serializable: ^3.3.0
   graphql_flutter: 3.1.0-beta.2
   carousel_slider: ^2.1.0
-  auto_size_text: ^2.1.0
   timeago: ^2.0.26
+  google_fonts: ^1.1.00
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
