--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   carousel_slider: ^2.1.0
   timeago: ^2.0.26
   google_fonts: ^1.1.00
+  number_display: ^2.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
